# byte_weave

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: byte_weaveConfig.cmake.in
examples/: CMakeLists.txt  advance_usage.cpp  basic_usage.cpp
include/byte_weave/: byte_weave.hpp  endians.hpp  field.hpp  layout.hpp  message.hpp  message_schema.hpp  message_span.hpp  message_view.hpp
include/byte_weave/detail/: message_api.hpp  traits.hpp
single_include/: byte_weave_old.hpp
single_include/byte_weave/: byte_weave.hpp
tests/: CMakeLists.txt  test_layouts.cpp  test_message_owning.cpp  test_message_schemas.cpp  test_message_span.cpp  test_message_view.cpp  test_nativeblobs.cpp  test_traits.cpp
tests/common/: helper.hpp
tools/amalgamate/: README.md  amalgamate.py
